Fix dark mode for dragonwood (PR #116)

--- a/src/css/games/dragonwood/darkStyle.less
+++ b/src/css/games/dragonwood/darkStyle.less
@@ -1,7 +1,23 @@
-@import "../common";
+.sideheadbutton,
+.display_dice_button {
+	background-color: #000;
+}
 
-.sideheadbutton, .display_dice_button { background-color: #000; }
-.roll_dice_button[style="background-color: rgb(0, 255, 0);"] { background-color: #006600 !important; }
-.roll_dice_button { background-color: #006600; }
-.ac_icon, .c_icon { filter: var(--highlight-min); }
-.sidehead-tooltip, .summary-tooltip { color: var(--light-80); }
+.roll_dice_button[style="background-color: rgb(0, 255, 0);"] {
+	background-color: #006600 !important;
+}
+
+.roll_dice_button {
+	background-color: #006600;
+}
+
+.ac_icon,
+.c_icon {
+	filter: var(--highlight-min);
+}
+
+.sidehead-tooltip,
+.summary-tooltip,
+.text-tooltip {
+	color: var(--light-80);
+}
